Updated css link

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://code.iconify.design/3/3.1.0/iconify.min.js"></script>
 
     <!-- Custom CSS -->
-     <link rel="stylesheet" href="/assets/main.css">
+     <link rel="stylesheet" href="assets/main.css">
 </head>
 <body>
 
