--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
     <script src="https://code.iconify.design/3/3.1.0/iconify.min.js"></script>
 
     <!-- Custom CSS-->
-     <link rel="stylesheet" href="/assets/404.css">
+     <link rel="stylesheet" href="assets/404.css">
 </head>
 <body>
 
