--- a/404.html
+++ b/404.html
@@ -30,7 +30,7 @@
             Die Seite, die du suchst, wurde nicht gefunden. Vielleicht hat sie sich im Code-Dschungel verirrt.
         </p>
 
-        <a href="/" class="btn">
+        <a href="/profile" class="btn">
             <span class="iconify" data-icon="material-symbols:arrow-back"></span>
             Zurück zum Profil
         </a>
