--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <span class="iconify" data-icon="simple-icons:discord"></span>
                     DM mich
                 </a>
-                <a href="404.html" class="btn btn-secondary">
+                <a href="404" class="btn btn-secondary">
                     <span class="iconify" data-icon="material-symbols:folder-open-outline"></span>
                     Mehr von mir
                 </a>
