--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <!-- Custom CSS -->
      <link rel="stylesheet" href="assets/main.css">
+     <link rel="icon" type="image/png" href="https://cdn.xylenmc.de/u/XOrECm.png">
 </head>
 <body>
 
